# EstateBot

./: .gitignore  docker-compose.yml  justfile  pyproject.toml
alembic/versions/: 2025-07-09_user_message.py
compose/: Dockerfile  start
config/: config.py  gunicorn_conf.py
src/: db.py  main.py
src/application/: chat.py  intent_handler.py  ner_resolver.py  search.py
src/models/: __init__.py  history.py
src/repo/: history.py  history_queue.py  http.py  intent_http.py  search_http.py
src/routers/: __init__.py  chat.py  history.py
src/schema/: ai_query.py  exceptions.py  history.py  schema.py
src/service/: history.py
src/shema/: ai_query.py  base.py  history.py  user.py
src/utils/: cache.py  exceptions.py  сache.py
